--- a/src/styles/ProjectCard.css
+++ b/src/styles/ProjectCard.css
@@ -1,5 +1,6 @@
 .project-card {
     border: 1px solid #ccc;
-    background-color: #062A79;
+    color: #000000;
+    background-color: #0c7fa6;
     max-width: 200px;
 }
