--- a/src/styles/LandingPage.css
+++ b/src/styles/LandingPage.css
@@ -1,6 +1,6 @@
 :root {
     --bg-color: #3f4246;
-    --color-text: #EAEAEA;
+    --color-text: #374151;
     --color-text-secondary: #9A9A9A;
 
     --color-projects: #062A79;
@@ -28,11 +28,12 @@
   background: white;
   border-radius: 1rem;
   box-shadow: 0 8px 20px rgba(0, 0, 0, 0.1);
-  max-width: 400px;
-  width: 90%;
+  max-width: 1200px;
+  width: 1500px;
 }
 
 .landing-content h2 {
+  color: #374151;
   font-size: 2rem;
   margin-bottom: 0.75rem;
 }
